--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.21 01:10:12<br />
+<b>start</b> - 2023.03.22 01:10:13<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -33.790000000000006<br />
+Hungary_VotiveChurch, not updated, -35.550000000000004<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -788,7 +788,7 @@ USA_FortWorthFighterJet, not updated, 0.0<br />
 USA_TCUHornedFrogs, not updated, 0.0899999999999892<br />
 USA_GeowoodstockXVIITexas, not updated, 0.0<br />
 USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.75<br />
+USA_TigerKing, not updated, 0.9899999999999949<br />
 USA_TexasGeowoodstock2019 kihagyva (100%), <br />
 USA_FortWorthSucculents kihagyva (100%), <br />
 USA_RobVsMatt, not updated, 0.0<br />
@@ -851,7 +851,7 @@ USA_GCHampionWay, not updated, 0.0<br />
 USA_GGamingTable, not updated, 0.75<br />
 USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.6099999999999994<br />
+USA_OwensboroRiverboat, not updated, 0.6400000000000006<br />
 USA_OwensboroRiverboatFlats, not updated, 0.7199999999999998<br />
 Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
@@ -871,7 +871,7 @@ USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.0<br />
 USA_CelticKnot, not updated, 0.14999999999999858<br />
-USA_STLPirateShip, <b>updated</b>, 214, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
+USA_STLPirateShip, not updated, 0.0<br />
 USA_BluesMunzee, not updated, 0.0<br />
 USA_HowellViking, not updated, 0.0<br />
 USA_STLPokeball, not updated, 0.6000000000000014<br />
@@ -883,7 +883,7 @@ USA_KirkwoodEvolutions4, not updated, 0.0<br />
 USA_KirkwoodEvolutions5, not updated, 0.0<br />
 USA_KirkwoodEvolutions6 kihagyva (100%), <br />
 USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
-USA_Woodpecker, <b>updated</b>, 194, <a href="https://www.munzee.com/map/9yzep995f/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Woodpecker.json" target="_blank">json</a><br />
+USA_Woodpecker, not updated, 0.0<br />
 USA_ZBriefcase kihagyva (100%), <br />
 USA_WinterCardinalFeather kihagyva (100%), <br />
 USA_Chickadee kihagyva (100%), <br />
@@ -990,14 +990,5 @@ USA_Friendship kihagyva (100%), <br />
 USA_HappyKrautMemorial kihagyva (100%), <br />
 USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-USA_city_Concord, <b>updated</b>, <a href="https://www.munzee.com/map/9yzep995f/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Concord.json" target="_blank">json</a><br />
-USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
-----felhasználók<br />
-Neloras_all, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1yt9t7/15.0001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_all.json" target="_blank">json</a><br />
-Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.0011" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
-----témák<br />
-<b>stop</b> - 2023.03.21 01:51:30<br />
-összesen 2478<br />
+<b>stop</b> - 2023.03.22 01:44:11<br />
+összesen 2038<br />
