--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.03.23 01:10:08<br />
+<b>start</b> - 2023.03.24 01:10:13<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -35.59<br />
+Hungary_VotiveChurch, not updated, -35.25<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -130,7 +130,7 @@ Netherlands_Klomp kihagyva (100%), <br />
 Netherlands_EvoAppleEch kihagyva (100%), <br />
 Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
 USA_GreenvilleCloverLeaf kihagyva (100%), <br />
-Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
+Denmark_IsvaffelInHilleroed, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 2<br />
 Denmark_EmeraldInHilleroed kihagyva (100%), <br />
 Finland_HalkokarinEvovene, not updated, 0.0<br />
 USA_CarettaSeaTurtle kihagyva (100%), <br />
@@ -175,7 +175,7 @@ Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
+Germany_BerlinMunzeePin, not updated, 0.19999999999999574<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.6711409395973149<br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.46999999999999886<br />
+USA_LighteksMinnesotaWild, not updated, 0.5500000000000043<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -408,7 +408,7 @@ Greece_Zakynthos, not updated, 0.0<br />
 Portugal_PortoNovoHighVoltage, not updated, 0.45045045045044674<br />
 Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
 Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
-UnitedKingdom_OhioFlagLondon, <b>updated</b>, 85, <a href="https://www.munzee.com/map/gcpstztrd/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_OhioFlagLondon.json" target="_blank">json</a> <b>100%</b><br />
+UnitedKingdom_OhioFlagLondon kihagyva (100%), <br />
 France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
 Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
@@ -442,7 +442,7 @@ USA_ChristmasSnowman kihagyva (100%), <br />
 USA_MOAYeti kihagyva (100%), <br />
 USA_MOAFlower kihagyva (100%), <br />
 USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, <b>updated</b>, 211, <a href="https://www.munzee.com/map/u9c2h7w98/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Lithuania_VirusBomb.json" target="_blank">json</a><br />
+Lithuania_VirusBomb, not updated, 0.0<br />
 Lithuania_KaisiadorysHammer kihagyva (100%), <br />
 Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
 Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
@@ -488,7 +488,7 @@ Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
 Germany_ErnieInVolksdorf, not updated, 0.0<br />
 Germany_Quietscheentchen kihagyva (100%), <br />
 Germany_Hammaburg, not updated, 0.0<br />
-Germany_FCStPauli, not updated, 0.060000000000002274<br />
+Germany_FCStPauli, not updated, 0.0799999999999983<br />
 Germany_YinYangNeustadt, not updated, 0.0<br />
 Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
 Denmark_SoparkenMaribo kihagyva (100%), <br />
@@ -754,7 +754,7 @@ USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
 UnitedKingdom_ISpyASpyInStockport, not updated, 0.5799999999999983<br />
 USA_SpyTrain kihagyva (100%), <br />
-USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
+USA_GShiftyJewels62West, not updated, 0.9899999999999984<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, not updated, 0.0<br />
 USA_SpyGlass kihagyva (100%), <br />
@@ -834,161 +834,10 @@ USA_GCandyCaneFlats, not updated, 0.9000000000000057<br />
 USA_GShamrock kihagyva (100%), <br />
 USA_GShamrockFlats, not updated, 0.3500000000000014<br />
 USA_GPumpkin kihagyva (100%), <br />
-USA_GPumpkinFlats, not updated, 0.0<br />
+USA_GPumpkinFlats, not updated, 0.37000000000000455<br />
 USA_Mauhaus kihagyva (100%), <br />
 USA_GToyotaCrossbows, not updated, 0.35999999999999943<br />
-USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
+USA_GToyotaCrossbowsBiggy, not updated, 0.9199999999999875<br />
 USA_GToyota kihagyva (100%), <br />
 USA_GToyotaFlats, not updated, 0.9699999999999989<br />
-USA_GJewelBelt, not updated, 0.4199999999999875<br />
-USA_GEvoBelt, not updated, 0.3400000000000034<br />
-USA_GBypassMixed kihagyva (100%), <br />
-USA_G62WestEvo, not updated, 0.6600000000000001<br />
-USA_NoelridgeMysteryFlats kihagyva (100%), <br />
-USA_GSouthland, not updated, 0.1999999999999993<br />
-USA_GMorning, not updated, 0.39000000000000057<br />
-USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.8500000000000014<br />
-USA_PotOfGold, not updated, 0.0<br />
-USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.6700000000000017<br />
-USA_OwensboroRiverboatFlats, not updated, 0.75<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.3299999999999983<br />
-Netherlands_RobAndLouise kihagyva (100%), <br />
-USA_TaylorSwiftTheEras, not updated, 0.0<br />
-USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees kihagyva (100%), <br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.7999999999999972<br />
-USA_CelticKnot, not updated, 0.14999999999999858<br />
-USA_STLPirateShip, not updated, 0.0<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.25<br />
-USA_STLPokeball, not updated, 0.6000000000000014<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
-USA_Woodpecker, not updated, 0.4300000000000068<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-USA_YanktonIceCream kihagyva (100%), <br />
-UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
-Australia_BendigoIcyPole kihagyva (100%), <br />
-USA_SouthPadreIslandKOA, not updated, 0.0<br />
-USA_HeartOfStCharles kihagyva (100%), <br />
-USA_ShawsGardenRose kihagyva (100%), <br />
-USA_WhiteCastleValentine kihagyva (100%), <br />
-USA_Ring kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
-USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat kihagyva (100%), <br />
-USA_GentleDoctorAnimals kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
-USA_BreadCo kihagyva (100%), <br />
-USA_Swon kihagyva (100%), <br />
-USA_ThankYouTruckers kihagyva (100%), <br />
-USA_CherryMini kihagyva (100%), <br />
-USA_BlossomMini kihagyva (100%), <br />
-USA_MarchMini kihagyva (100%), <br />
-USA_PiDay2022 kihagyva (100%), <br />
-USA_SpringTree kihagyva (100%), <br />
-USA_HeavySmokeBBQ kihagyva (100%), <br />
-USA_BowleroLaserTag kihagyva (100%), <br />
-USA_BohrerPark kihagyva (100%), <br />
-USA_Snowflake kihagyva (100%), <br />
-USA_WebsterGrovesStatesmen kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesVirtuals kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesFlats kihagyva (100%), <br />
-USA_WinterTree kihagyva (100%), <br />
-USA_AutumnTree kihagyva (100%), <br />
-USA_ZeeOps kihagyva (100%), <br />
-USA_StPetersChess kihagyva (100%), <br />
-USA_PiratesRum kihagyva (100%), <br />
-USA_NobHillFishTank kihagyva (100%), <br />
-USA_ChristmasSleigh kihagyva (100%), <br />
-USA_StLouisChristmasStockingVirtual kihagyva (100%), <br />
-USA_StLouisChristmasStockingFlat kihagyva (100%), <br />
-USA_JimmyBeagle kihagyva (100%), <br />
-USA_PirateAxe kihagyva (100%), <br />
-USA_ShamrocksMug kihagyva (100%), <br />
-USA_Halloween kihagyva (100%), <br />
-USA_AutumnMoon kihagyva (100%), <br />
-USA_Rosesquirrel kihagyva (100%), <br />
-USA_Campfire kihagyva (100%), <br />
-USA_GiftOfLife kihagyva (100%), <br />
-USA_PirateLongsword kihagyva (100%), <br />
-USA_WarriorSpear kihagyva (100%), <br />
-USA_PizzaOnTheHill kihagyva (100%), <br />
-USA_StLouisFlamingo kihagyva (100%), <br />
-USA_PirateCrossbow kihagyva (100%), <br />
-USA_Munzee10 kihagyva (100%), <br />
-USA_SybergsShark kihagyva (100%), <br />
-USA_ChuckECheesePizza kihagyva (100%), <br />
-USA_9Mile kihagyva (100%), <br />
-USA_MothersDayFlowerPot kihagyva (100%), <br />
-USA_TurtlePark kihagyva (100%), <br />
-USA_StacyParkFlower kihagyva (100%), <br />
-USA_CottlevilleDragonfly kihagyva (100%), <br />
-USA_SchaeferParkBugs kihagyva (100%), <br />
-USA_StLouisCardinalsPart2, not updated, 0.0<br />
-USA_TattooedDog kihagyva (100%), <br />
-USA_TiemeyerPatch kihagyva (100%), <br />
-USA_CincoDeMayoTaco kihagyva (100%), <br />
-USA_OverlandCar kihagyva (100%), <br />
-USA_FriscoTrain kihagyva (100%), <br />
-USA_StLouisAirplane kihagyva (100%), <br />
-USA_PiDayPie kihagyva (100%), <br />
-USA_AfftonHorse kihagyva (100%), <br />
-USA_KirkwoodAnchor kihagyva (100%), <br />
-USA_WalpelhorstHorse kihagyva (100%), <br />
-USA_StCharlesAnchor kihagyva (100%), <br />
-USA_Birdhouse kihagyva (100%), <br />
-USA_Cardinals kihagyva (100%), <br />
-USA_FlatFriends kihagyva (100%), <br />
-USA_FlatLouInStLou kihagyva (100%), <br />
-USA_FlatLouInStLouPink, not updated, 0.0<br />
-USA_Friendship kihagyva (100%), <br />
-USA_HappyKrautMemorial kihagyva (100%), <br />
-USA_OFallonSoccer kihagyva (100%), <br />
-USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-<b>stop</b> - 2023.03.23 01:48:12<br />
-összesen 2284<br />
+USA_GJewelBelt, <b>updated</b>, 500, <a href="https://www.munzee.com/map/dngc74908/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_GJewelBelt.json" target="_blank">json</a><br />
